--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -259,12 +259,12 @@
                                               <label class="sr-only" for="exampleInputEmail2">Email</label>
                                               <input type="email" class="form-control" id="exampleInputEmail2" ng-model="email.email" placeholder="Enter an email">
                                             </div>
-                                             <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="pushElement(email,emails)" >Add</button>
+                                             <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="addEmail(email)" >Add</button>
                                               <button type="submit" ng-click="showEmailForm=false" class="btn btn-default">X</button>
                                           </form>
                                         </div>
                           </li>
-                        <li ng-repeat="email in emails" ng-mouseenter="showOptions($event)" ng-mouseleave="hideOptions($event)"> <a editable-text="email.email" onbeforesave="inlinePatch('Infonode','emails', 'email',email.entityKey,$data)"> <%=email.email %>  </a> </li>
+                        <li ng-repeat="email in infonodes.emails" ng-mouseenter="showOptions($event)" ng-mouseleave="hideOptions($event)"> <a editable-text="email.email" onbeforesave="inlinePatch('Infonode','emails', 'email',email.entityKey,$data)"> <%=email.email %>  </a> </li>
                           <li><a class="btn-link addAnotherPhone" ng-hide="showEmailForm" ng-click="showEmailForm=true"><i class="icon-plus"></i> Add a new email address </a></li>
                           
                         </ul>
