--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -285,32 +285,70 @@
                           <strong>Website</strong>
                         </div>
                         <ul class="list-unstyled contact-infos">
+                          <li ng-show="showWebsiteForm">
+                                      <div class="row">
+                                        <form class="form-inline newLeadForm" role="form">
+                                          <div class="form-group lg-group" style="">
+                                            <label class="sr-only" for="exampleInputEmail2">Website</label>
+                                            <input type="text" ng-model="website.url" class="form-control" id="exampleInputEmail2" placeholder="Enter a Website">
+                                          </div>
+                                      <button type="submit" ng-click="addWebsite(website)" class="btn blue jfk-button jfk-button-action">Add</button>
+                                      <button type="submit" ng-click="showWebsiteForm=false" class="btn btn-default">X</button>
+                                        </form>
+                                      </div>
+                          </li>
                           <li ng-repeat="website in infonodes.websites"><a editable-text="website.url" onbeforesave="inlinePatch('Infonode','websites', 'url',website.entityKey,$data)" href="http://<%=website.url%>"  target="_blank" ><%=website.url%></a> </li>
                           <li>
-                            <a href="#websitemodal" class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i> Add a new Website </a>
+                            <a  ng-hide="showWebsiteForm" ng-click="showWebsiteForm=true" class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i> Add a new Website </a>
                           </li>
                         </ul>
                         <div class="news-block-tags">
                           <strong>Social Links</strong>
                         </div>
                         <ul class="list-unstyled contact-infos">
+                           <li ng-show="showSociallinkForm">
+                                          <div class="row">
+                                            <form class="form-inline newLeadForm" role="form">
+                                              <div class="form-group lg-group" style="">
+                                                <label class="sr-only" for="exampleInputEmail2">Social link</label>
+                                                <input type="text" class="form-control" id="exampleInputEmail2" ng-model='sociallink.url' placeholder="Enter a social link">
+                                              </div>
+                                               <button ng-click="addSocial(sociallink)" type="submit" class="btn blue jfk-button jfk-button-action">Add</button>
+                                                <button type="submit" ng-click="showSociallinkForm=false" class="btn btn-default">X</button>
+                                            </form>
+                                          </div>
+                              </li>
                           <li ng-repeat="sociallink in infonodes.sociallinks"><a editable-text="sociallink.url" onbeforesave="inlinePatch('Infonode','sociallinks', 'url',sociallink.entityKey,$data)" href="<%=sociallink.url%>" target="_blank"> <%=sociallink.url%> </a></li>
-                          <li>
-                            <a href="#socialmodal" class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i> Add a new social links </a>
-                          </li>
+                           
+                           <li><a class="btn-link addAnotherPhone" ng-hide="showSociallinkForm" ng-click="showSociallinkForm=true"><i class="icon-plus"></i> Add a new social links </a></li> 
                         </ul>
                       </div>
                       <div class="news-blocks blank-card blank-card-yellow newsCard">
                         <h3>Custom Fields</h3>
                         <ul class="list-unstyled contact-infos">
+                            <li ng-show="showCustomFieldForm">
+                                          <div class="row">
+                                            <form class="form-inline newLeadForm" role="form">
+                                              <div class="form-group sm-group" style="">
+                                                <label class="sr-only" for="exampleInputEmail2">Field</label>
+                                                <input type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.field" placeholder="Enter field name">
+                                              </div>
+                                              <div class="form-group sm-group" style="">
+                                                <label class="sr-only" for="exampleInputEmail2">Value</label>
+                                                <input type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.value" placeholder="Enter a value">
+                                              </div>
+                                               <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="addCustomField(customfield)">Add</button>
+                                                <button type="submit" class="btn btn-default" ng-click="showCustomFieldForm=false">X</button>
+                                            </form>
+                                          </div>
+                            </li>
                           <li ng-repeat="custom in infonodes.customfields">
                                     <span>
                                     <%= custom.field%>  : <%= custom.value%> </span>
 
                           </li>
-                          <li>
-                            <a href="#customfields" class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i> Add a new custom field </a>
-                          </li>
+                         <li>
+                         <a ng-click="showCustomFieldForm=true" ng-hide="showCustomFieldForm"class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i> Add a new custom field </a></li>
                         </ul>
                       </div>
                     </div>
