hide input form on infonode after insertion
Former-commit-id: 808cd47695f10fdd900f8dd4b8a3c4392a7830bd

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -1031,7 +1031,7 @@
                         <div class="col-md-9">
                           <!--input type="text" placeholder="{{_('home')}},{{_('work')}},{{_('mobile')}},{{_('other')}} ..." required id="id_name" ng-model="phone.type_number"-->
                           <select ng-model="phone.type_number" class="form-control">
-                            <option value="home" selected="selected" >{{_('home')}}</option>
+                            <option >{{_('home')}}</option>
                             <option>{{_('work')}}</option>
                             <option>{{_('mobile')}}</option>
                             <option>{{_('other')}}</option>
