--- a/templates/accounts/note_show.html
+++ b/templates/accounts/note_show.html
@@ -1,78 +1,76 @@
-<div  class="page-content">
-<div class="" ng-show="immediateFailed">
-         <div class="col-md-12">  
-          <h1>Sign-in Button;</h1>
-              <span id="signin">
-                  <span id="myGsignin"></span>
-              </span>
-        </div>
+<div class="row subHeader">
+  <div class="currentApp">
+    <h2 class="page-title">
+      {{active_app.label}}
+    </h2>
   </div>
-
-      <div class="row">
-         <div class="col-md-12">
-         
-            <!--div class="pull-right sharebuttonDiv"> 
-                  <a href="" class="<btn blue jfk-button jfk-button-action">
-                    <i class="icon-lock"></i> {{ _("Share") }}
-                  </a>     
-            </div-->
-            <h2>
-            <a href="<%=uri%>" data-toggle="tooltip" data-placement="bottom" title="Back to <%=note.about.kind%>">
-            <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>    <%=note.about.kind%> > <%=note.about.name%>  </h2>
-
-          <hr>
+  <div class=" subHeaderContent">
+    <div class="pull-right sharebuttonDiv">
+      <a href="#sharingSettingsModal" class="btn blue jfk-button jfk-button-action" data-toggle="modal">
+        <i class="icon-lock"></i>
+        {{ _("Share") }}
+      </a>
+    </div>
+    <h2 class="page-title" >
+      <a href="<%=uri%>" data-toggle="tooltip" id='testEdit' data-placement="bottom" title="Back to Accounts">
+        <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="/static/img/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false">
+      </a>
+      <%=note.about.kind%> > <%=note.about.name%>
+    </h2>
+  </div>
+</div>
+<div  class="page-content">
+  <div class="loader-container row" ng-show="isLoading">
+    <div class="loader-dialog col-md-4 col-md-offset-4 ">
+      <div class="loader-content">
+        Loading...
       </div>
     </div>
-      <!--HKA 19.11.2013 Begin  row-2 who is involved -->
-    <div class="row">
-    <!--HKA 19.11.2013 BEGIN Span comments-->
+  </div>
+  <div class="container" ng-show="immediateFailed">
     <div class="col-md-12">
-      <div class="col-md-8">
-      <!-- BEGIN PORTLET-->
-        <div class="portlet">
-          <div class="portlet-title line">
-          <div class="caption">
-                <i class="fa fa-comments"></i>
-                    Note > <%=note.title%>
-          </div>
-          </div>
-          <div class="portlet-body">
-             <ul class="chats">
-                  <li class="in">
-                    <img class="avatar" alt="" ng-src="<%=note.author.photo %>" />
-                    <div class="">
-                      <span class="arrow"></span>
-                      <a href="#" class="name"><%= note.author.display_name%></a>
-                      <span class="datetime"><!--at <%= note.created_at %> --></span><br>
-                      <span class="body" ng-bind-html-unsafe="note.content"></span>
-                    </div>
-                  </li>
-                  
-                </ul>
-          </div>
+      <h1>{{ _("Sign-in Button;") }}</h1>
+      <span id="signin">
+        <span id="myGsignin"></span>
+      </span>
+    </div>
+  </div>
+<div ng-show="isContentLoaded" class="row">
+  <div class="col-md-9">
+    <div class="row">
 
-       
-         
-        </div>
-      <!-- End Portlet -->
-      <div class="row">
-      
-                  <div class="col-md-12 margin-bottom-10">
-                 <p class⁼"lead"=""><strong>{{ _("Just add comments to remember what's important :") }}</strong> </p>
-                          <form id="addComment" ng-submit="addComment(comment)" class="ng-pristine ng-valid">
-                                        <div class="form-group">  
-                                            <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="comment.content"></textarea>
-                                        </div>
-                                         <div class="pull-right">
-                                        
-                                          <input ng-hide="isLoading" type="submit" class="btn green" value="Add comment">
-                                          <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
-                                          </div>
-                      </form>
-                      </div>
-        </div>      
-        
-      <ul class="chats">
+      <div class="showPage custom-show margin-bottom-15  col-md-12">
+        <span class="page-meta pull-right">
+          <i class="icon-pencil">
+            <a ng-click="editaccount()" class="btn-link addAnotherPhone" data-toggle="modal">
+              Edit
+            </a>
+          </i>
+           |
+          <i class="icon-trash">
+            <a ng-click="editbeforedelete()" class="btn-link addAnotherPhone">  Delete
+            </a>
+          </i>
+        </span>
+        <h2 class="note-title"><%= note.title%></h2>
+        <p>Posted by <%=note.created_by.display_name%></p>
+
+        <div class="row margin-bottom-10">
+          <div class="col-md-2">
+            <div class="pic">
+                <img alt="<%=note.created_by.display_name%>" class="note-photo-creator" ng-src="<%=note.created_by.photo%>">
+             </div>
+             <a ng-show="showUpload" ng-click="createPickerUploader()" href="" class="btn btn-default btn-upload" data-toggle="modal" style="display: none;">
+               <img src="/static/img/upload_logo.png">
+             </a>
+          </div>
+          <div class="col-md-10">
+            <div class="row">
+              <div class="col-md-12">
+                <span class="topic-content">
+                  <%= note.content %>
+                </span>
+                <ul class="chats">
                   <li class="in" ng-repeat="comment in comments" id="comment_<%=$index%>">
                     <img class="avatar" alt="" ng-src="<%=comment.author.photo%>" />
                     <div class="message">
@@ -84,104 +82,81 @@
                       </span>
                     </div>
                   </li>
-                  
-        </ul>
-        <div class="row">
-        <div class="col-md-12">
-                                <div class="pagination pull-right" ng-hide="isLoading">
-                                      
-                                    <button ng-click="listPrevPageItemscomment()" id="sample_editable_1_new" class="btn" 
-                                       ng-show="paginationcomment.prev">
-                                        {{_("Prev")}} 
-                                        </button >
-                                        <button ng-click="listNextPageItemscomment()"  class="btn" ng-show="paginationcomment.next">
-                                        {{_("Next")}} 
-                                        </button>
-                                    
-                                    </div>
-                                    <h3 class="pagination pull-right" ng-show="isLoading">Loading...</h3>
-        </div>
-        </div>
-        
-      </div>
-    <!--HKA 19.11.2013 END Span comments-->
-
-
-
-  <!--HKA 19.11.2013 BEGIN Span who is involved -->
-      <div class="col-md-4">
-        <div class="portlet">
-                <div class="portlet-title line">
-                  <div class="caption"><i class="icon-tasks"></i>{{ _("Who's involved") }}</div>
-                  
-                </div>
-                <div class="portlet-body">
-                <ul class="chats">
-                 
-                 <li  ng-repeat="contributor in contributors">
-                    <img class="avatar" alt="" src="<%=contributor.photoLink%>" />
-                    
-                      <span class="arrow"><%=contributor.name%> : [<%=contributor.role%>]</span>
-                     
-                   
-                  </li>
-                  <li><a href="#addContributor"  class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i>{{ _("Add a new Contributor") }}</a></li>
-
-                 
                 </ul>
-                </div>
-                
-       </div>
-    </div>
-               <!--HKA 03.12.2013 Add new Contributors -->
-         <div id="addContributor" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3 id="myModalLabel">{{_("Involve new contributors")}}</h3>
-              </div>
-              <div class="modal-body">
-                 <form id="addAccount" name="addaccount" ng-submit="addNewContributor(slected_memeber,role)" class="form-horizontal"> 
-                  <fieldset>
-                  
-                    <p>{{ _("Invite people from your team and start working together on this task. Everyone you invite will receive an email.") }}</p>
 
-                    <div>
-                    <div class="invitation" ng-show="slected_memeber">
-                      <img class="google-avatar" src="<%= slected_memeber.google_public_profile_photo_url%>"/>
-                        <strong> <%= slected_memeber.google_display_name %> < <%=slected_memeber.email%> ></strong>
-                    </div>
-                    <div class="control-group">
-                      <input type="text" ng-model="user" typeahead="user as user.google_display_name + ' <' + user.email + '>' for user in users | filter:$viewValue | limitTo:8" typeahead-on-select="selectMember()" class="input-block-level" placeholder="{{_('Enter name or email addresse to involve people in this discussion')}}">
-                    </div>
-                    <div class="control-group">
-                          <label class="control-label">{{ _("Add as:") }}</label>
-                          <div class="controls">
-                            <select class="medium m-wrap" tabindex="1" ng-model="role">
-                              <option value="responsible">{{ _("Responsible") }}</option>
-                              <option value="participant">{{ _("Participant") }}</option>
-                              <option value="invited">{{ _("Invited") }}/option>
-                              
-                            </select>
-                          </div>
-                        </div>
-                      </div>
-                    </fieldset>
-                
               </div>
-              <div class="modal-footer">
-                <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <button  type="submit" class="btn blue addContactNow">{{_("Involve")}}</button>
+            </div>
+            <div class="row comments-block">
+              <div class="col-md-12">
+                <p class⁼"lead"><strong>{{ _("Discuss this message") }}</strong> </p>
+                  <form id="addComment" ng-submit="addComment(comment)" class="ng-pristine ng-valid">
+                    <div class="form-group">
+                      <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="comment.content"></textarea>
+                    </div>
+                    <div class="pull-right">
+                      <input ng-hide="isLoading" type="submit" class="btn green" value="Add comment">
+                      <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+                    </div>
+                  </form>
               </div>
-               </form>
-       </div>
-
+            </div>
+          </div>
+        </div>
 
       </div>
-  <!--HKA 19.11.2013 END Span who is involved -->
-    
+      <!-- END PAGE HEADER-->
+      <!-- BEGIN PAGE CONTENT-->
+      <div class="col-md-12">
+        <div class="row">
+          <div class="">
+            <!-- $ tabs -->
 
-
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+  <!-- tasks cards -->
+  <div class="col-md-3 tasks-col">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="portlet showCard">
+          <div class="portlet-title line">
+            <div class="caption">
+              Who's involved
+            </div>
+          </div>
+          <div class="portlet-body" id="chats">
+            <div class="scroller" style="height:200x" data-always-visible="1" data-rail-visible="0">
+              <div id="newTask">
+
+                <ul id="tasks" class="list-unstyled">
+
+                  <li>
+                    <a ng-click="showAddContributor=true;" class="btn-link addAnotherPhone" data-toggle="modal">Invite people to participate in this discussion</a>
+                  </li>
+                </ul>
+                <div class="add-contributor" ng-show="showAddContributor">
+                  <div class="invitation" ng-show="slected_memeber">
+                    <img class="google-avatar" src="<%= slected_memeber.google_public_profile_photo_url%>"/>
+                    <strong> <%= slected_memeber.google_display_name %> < <%=slected_memeber.email%> ></strong>
+                  </div>
+                  <div class="control-group">
+                    <input type="text" ng-model="user" typeahead="user as user.google_display_name + ' <' + user.email + '>' for user in users | filter:$viewValue | limitTo:8" typeahead-on-select="selectMember()" class="input-block-level" placeholder="{{_('Enter name or email addresse to involve people in this discussion')}}">
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+               <!--HKA 03.12.2013 Add new Contributors -->
+
     <!--HKA 19.11.2013 END row-fluid-2 Span who is involved -->
 
 
@@ -189,5 +164,51 @@
 
     </div>
     </div>
+<div id="addContributor" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+     <div class="modal-header">
+       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+       <h3 id="myModalLabel">{{_("Involve new contributors")}}</h3>
+     </div>
+     <div class="modal-body">
+        <form id="addAccount" name="addaccount" ng-submit="addNewContributor(slected_memeber,role)" class="form-horizontal">
+         <fieldset>
 
-   
+           <p>{{ _("Invite people from your team and start working together on this task. Everyone you invite will receive an email.") }}</p>
+
+           <div>
+           <div class="invitation" ng-show="slected_memeber">
+             <img class="google-avatar" src="<%= slected_memeber.google_public_profile_photo_url%>"/>
+               <strong> <%= slected_memeber.google_display_name %> < <%=slected_memeber.email%> ></strong>
+           </div>
+           <div class="control-group">
+             <input type="text" ng-model="user" typeahead="user as user.google_display_name + ' <' + user.email + '>' for user in users | filter:$viewValue | limitTo:8" typeahead-on-select="selectMember()" class="input-block-level" placeholder="{{_('Enter name or email addresse to involve people in this discussion')}}">
+           </div>
+           <div class="control-group">
+                 <label class="control-label">{{ _("Add as:") }}</label>
+                 <div class="controls">
+                   <select class="medium m-wrap" tabindex="1" ng-model="role">
+                     <option value="responsible">{{ _("Responsible") }}</option>
+                     <option value="participant">{{ _("Participant") }}</option>
+                     <option value="invited">{{ _("Invited") }}/option>
+
+                   </select>
+                 </div>
+               </div>
+             </div>
+           </fieldset>
+
+     </div>
+     <div class="modal-footer">
+       <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
+       <button  type="submit" class="btn blue addContactNow">{{_("Involve")}}</button>
+     </div>
+      </form>
+</div>
+
+
+</div>
+<!--HKA 19.11.2013 END Span who is involved -->
+
+
+
+</div>
