fixing opp stage ng_option problem
Former-commit-id: 08a096a1d5d5cea84faad69482e54f5767ab3ba1

--- a/templates/opportunities/opportunity_new.html
+++ b/templates/opportunities/opportunity_new.html
@@ -213,7 +213,7 @@
                                     <div class="form-group">
 
                                         <div class="col-md-12">
-                                          <select ng-model="stage_selected" ng-options="opps.name + ' - ( ' + opps.probability + '% )' for opps in opportunitystages | orderBy: 'name':true" class="form-control selector-margin" >
+                                          <select ng-model="stage_selected" ng-options="opps.name + ' - ( ' + opps.probability + '% )' for opps in opportunitystages " class="form-control selector-margin" >
                                             <option value="">-- choose Stage --</option>
                                           </select>
                                         </div>
