--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -150,7 +150,7 @@
       <div class="row">
         <div class="col-md-12 waterfall" ng-hide="blankStateaccount">
           <div ng-repeat="account in accounts"  droppable  id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(account,$index)">
-            <div class="detailsSection">
+            <div class="detailsSection" id="detailsId">
               <div class="head">
                 <div class="pic">
                   <a href="/#/accounts/show/<%= account.id %>" class="startup-link" title="account.name"><img ng-hide="account.logo_img_id" alt="account.name" class="img-resonsive img-thumbnail" src="/static/img/default_company.png" >
