--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -70,8 +70,8 @@
                     <div class="head">
 
                         <div class="row">
-                          <div class="col-md-12">
-                            <div class="stage col-md-10 col-md-offset-1 ">
+                          <div class="col-md-12 col-xs-5">
+                            <div class="stage" >
                                 <div easypiechart class="chart" options="chartOptions" percent="opportunity.current_stage.probability"></div>
                                 <div class="oppStage col-md-12">
                                   <span><%=opportunity.current_stage.name%></span><br>
@@ -80,8 +80,8 @@
                                 </div>
                             </div>
                           </div>
-                          <div class="oppDetails">
-                            <div class="col-md-12" style="border-left: 1px solid rgb(218, 218, 218);">
+                          <div class="oppDetails col-md-12 col-xs-7">
+                            <div class="col-md-12">
                               <div class="row">
                                 <div class="col-md-12">
                                   <div class="oppDescription">
@@ -98,9 +98,10 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="col-md-12 col-sm-12 col-xs-6">
+                            <div class="col-md-12 col-sm-12">
                                 <div class="oppPrice">
-                                  <%= opportunity.currency %><%= opportunity.amount_total %>
+                                  <span><%= opportunity.currency %></span>
+                                  <span><%= opportunity.amount_total %></span>
                                   <p class="amount-details" ng-show="opportunity.duration_unit!='fixed'">
                                       <%= opportunity.duration %> × <%= opportunity.amount_per_unit %>/<%= opportunity.duration_unit %>
                                   </p>
@@ -436,7 +437,7 @@
     }
     handleUniform();
     $('.waterfall').waterfall({ 
-        colMinWidth: 200, 
+        colMinWidth: 250, 
         defaultContainerWidth: 800,
         autoresize: true
       });
